[gd_scene load_steps=5 format=3 uid="uid://dpmmxmh25m8m5"]

[ext_resource type="Shader" path="res://assets/colorizer.gdshader" id="1_jnlkr"]
[ext_resource type="Script" path="res://scripts/conveyor.gd" id="2_3tktt"]
[ext_resource type="Texture2D" uid="uid://byhx3ey81ceh5" path="res://assets/images/conveyor_atlas.png" id="2_torx5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jd16p"]
shader = ExtResource("1_jnlkr")
shader_parameter/light_color = Color(0.632812, 0.632812, 0.632812, 1)
shader_parameter/dark_color = Color(0.359375, 0.359375, 0.359375, 1)

[node name="Conveyor" type="Node2D"]
material = SubResource("ShaderMaterial_jd16p")
script = ExtResource("2_3tktt")

[node name="Treads1" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(36, 0)
texture = ExtResource("2_torx5")
region_enabled = true
region_rect = Rect2(0, 160, 1910, 219)

[node name="Treads2" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(36, 0)
texture = ExtResource("2_torx5")
region_enabled = true
region_rect = Rect2(0, 661, 1910, 219)

[node name="Treads3" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(36, 0)
texture = ExtResource("2_torx5")
region_enabled = true
region_rect = Rect2(0, 912, 1910, 219)

[node name="Treads4" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(36, 0)
texture = ExtResource("2_torx5")
region_enabled = true
region_rect = Rect2(0, 412, 1910, 219)

[node name="Gear1" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(-836, 51)
texture = ExtResource("2_torx5")
region_enabled = true
region_rect = Rect2(14.7053, 9.17654, 85.0732, 86.1557)

[node name="Gear2" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(2, 51)
rotation = -0.957376
texture = ExtResource("2_torx5")
region_enabled = true
region_rect = Rect2(14.7053, 9.17654, 85.0732, 86.1557)

[node name="Gear3" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(306, 51)
rotation = 1.69208
texture = ExtResource("2_torx5")
region_enabled = true
region_rect = Rect2(14.7053, 9.17654, 85.0732, 86.1557)

[node name="Gear4" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(594, 51)
rotation = 2.81206
texture = ExtResource("2_torx5")
region_enabled = true
region_rect = Rect2(14.7053, 9.17654, 85.0732, 86.1557)

[node name="Gear5" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(897, 51)
rotation = 0.963981
texture = ExtResource("2_torx5")
region_enabled = true
region_rect = Rect2(14.7053, 9.17654, 85.0732, 86.1557)

[node name="Gear6" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(-289, 51)
texture = ExtResource("2_torx5")
region_enabled = true
region_rect = Rect2(14.7053, 9.17654, 85.0732, 86.1557)

[node name="Gear7" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(-573, 51)
rotation = -0.834641
texture = ExtResource("2_torx5")
region_enabled = true
region_rect = Rect2(14.7053, 9.17654, 85.0732, 86.1557)
